--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.99.0",
+    "dayjs": "^1.11.13",
     "next": "15.4.3",
     "next-sanity": "^9.12.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-is": "^19.1.0",
     "sanity": "^3.99.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
